Change alt text for inline gallery format

--- a/galleries_inline.format.html
+++ b/galleries_inline.format.html
@@ -1,6 +1,6 @@
 <li>
   <figure>
-    <img src="{url}" alt="{caption}" class="{class}"/>
+    <img src="{url}" alt="{alt}" class="{class}"/>
     <div class="figcaption">
       {<p class="caption">|caption|</p>}
       {<p class="credit">|credit|</p>}
