Update gallery caption wrapper to prevent bugs
otherwise it breaks if caption contains <p> tag

--- a/galleries_inline.format.html
+++ b/galleries_inline.format.html
@@ -2,8 +2,8 @@
   <figure>
     <img src="{url}" alt="{alt}" class="{class}"/>
     <div class="figcaption">
-      {<p class="caption">|caption|</p>}
-      {<p class="credit">|credit|</p>}
+      {<div class="caption">|caption|</div>}
+      {<div class="credit">|credit|</div>}
     </div>
   </figure>
 </li>
