Update mini gallery

--- a/galleries/mini/mini.html
+++ b/galleries/mini/mini.html
@@ -2,6 +2,6 @@
   {thumbnails}
 </ul>
 <div class="gallery-info">
-  <span class="gallery-name">Photo Flip:</span>
+  <span class="gallery-name">Photos:</span>
   <span class="gallery-title">{title}</span>
 </div>
