Add figcaption element to galleries

--- a/galleries_inline.format.html
+++ b/galleries_inline.format.html
@@ -1,9 +1,9 @@
 <li>
   <figure>
     <img src="{url}" alt="{alt}" class="{class}"/>
-    <div class="figcaption">
+    <figcaption>
       {<div class="caption">|caption|</div>}
       {<div class="credit">|credit|</div>}
-    </div>
+    </figcaption>
   </figure>
 </li>
