Add large gallery. Improve accessiblity of galleries.

--- a/galleries/mini/mini.html
+++ b/galleries/mini/mini.html
@@ -1,7 +1,6 @@
-<ul class="gallery-images">
+<ul class="gallery_images">
   {thumbnails}
 </ul>
-<div class="gallery-info">
-  <span class="gallery-name">Photos:</span>
-  <span class="gallery-title">{title}</span>
+<div class="gallery_label">
+  <span class="js-gallery-title">{title}</span>
 </div>
